--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>SGIVS Global</title>
+    <title>IVS Global</title>
     <base href="/" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
