added updated code

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="assets/layout/images/favicon.png"
+      href="assets/layout/images/favicon.ico"
     />
     <link
       rel="stylesheet"
